<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">ECGTest</string>
    <string name="device">Device</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">QUIT ECG Test?</string>
    <string name="popup_message">Device Quit , Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="no_rssi">&lt;No RSSI Value&gt;</string>
    <string name="rssiStatus">RSSI</string>
    <string name="acc_x_status">ACC X Status</string>
    <string name="acc_no_value">&lt;No value&gt;</string>
    <string name="acc_y_status">ACC Y Status</string>
    <string name="acc_z_status">ACC Z Status</string>
</resources>
