<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/deviceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device" >
            </TextView>

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_device" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" >
            </TextView>

            <TextView
                android:id="@+id/statusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rssiStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rssiStatus" >
            </TextView>

            <TextView
                android:id="@+id/rssiValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_rssi" >
            </TextView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ProgressBar
                android:id="@+id/progressBarECG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/select_device" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/stop" />
        </RelativeLayout>

        <RelativeLayout            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/disconnect" >
            </Button>
        </RelativeLayout>
        
        <LinearLayout            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/acc_x_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_x_status" >
            </TextView> 
            
            <TextView
                android:id="@+id/acc_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_no_value" >
            </TextView>

            <TextView
                android:id="@+id/acc_y_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_y_status" >
            </TextView> 
 
            <TextView
                android:id="@+id/acc_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_no_value" >
            </TextView>

            <TextView
                android:id="@+id/acc_z_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_z_status" >
            </TextView> 
 
            <TextView
                android:id="@+id/acc_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_no_value" >
            </TextView>    
                                 
         </LinearLayout>   
             
        <LinearLayout
            android:id="@+id/layout_animate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

		    <ImageView
		        android:id="@+id/animated_view"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"/>            
		    
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>